# fastbot

./: .dockerignore  .gitignore  Dockerfile-dev  Dockerfile-prod  Dockerfile.dev  Dockerfile.prod  Dockerfile.test  Makefile  alembic.ini  db-docker-compose.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  logger.py  main.py
app/admin/: admin.py  auth.py  view_overriding.py
app/auth/: __init__.py  auth.py  cookie.py  dependencies.py  exceptions.py
app/backend/: config.py  logger.py
app/backend/admin/: __init__.py  admin.py  auth.py  protocols.py
app/backend/auth/: __init__.py  auth.py  config.py  cookie.py  dependencies.py  exceptions.py  protocols.py  schemas.py
app/bot/: config.py  main.py  router.py  schemas.py  utils.py
app/cookie/: cookie.py
app/db/: dal.py
app/jwt/: exceptions.py  jwt.py
app/pages/: routes.py
app/sentence_generator/: gpt.py  prompts.py  providers.py  sentence_generator.py
app/shared/: exceptions.py  schemas.py
app/text_generator/: prompts.py  text_generator.py
app/users/: dal.py  exceptions.py  models.py  schemas.py  services.py
app/utils/: backup.py
app/vocabulary/: dal.py  dependencies.py  models.py  routes.py  schemas.py  services.py
app/words/: dal.py  models.py  schemas.py  services.py
migrations/: env.py
migrations/versions/: 2023_11_14_2136-fb949f317cd7_.py  2023_11_14_2147-3a079dc3e5d8_.py  2023_11_14_2332-473d6757ff80_.py  2023_11_14_2334-01d981efa3d1_.py  2023_11_16_2130-fa05e3a728b4_.py  2023_11_16_2131-48aa33e760af_.py  2023_11_19_1636-42c773427fde_.py  2023_11_26_1653-1ca7276a8283_.py  2023_12_22_1521-b4e48086e674_.py  2023_12_23_1812-30d4999f7fde_.py  2023_12_23_1812-f3e94349868d_.py
ngrok/: Dockerfile
ngrok/config/: ngrok.example.yml
secrets/environment/: .dev.env.example
tests/: conftest.py  mocks.py
tests/integration_tests/: conftest.py  test_language_pairs_service.py  test_uow.py  test_user_service.py  test_vocabulary_service.py
tests/unit_tests/: test_cookie_manager.py  test_dal.py  test_jwt.py
(+134 files in other folders)
