[tool.poetry]
name = "fastbot"
version = "0.1.0"
description = ""
authors = ["MuzykaAndrii <andrymyzik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.0.3"
uvicorn = "^0.24.0.post1"
requests = "^2.31.0"
fastapi = "0.103"
aiogram = "^3.1.1"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
