[tool.poetry]
name = "fastbot"
version = "0.1.0"
description = ""
authors = ["MuzykaAndrii <andrymyzik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.0.3"
uvicorn = "^0.24.0.post1"
requests = "^2.31.0"
fastapi = "0.103"
aiogram = "^3.2.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.12.1"
magic-filter = "^1.0.12"
g4f = "0.1.9.3"
bcrypt = "^4.1.2"
starlette-admin = "^0.12.2"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
rapidfuzz = "^3.8.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
coverage = "^7.6.1"
pytest-cov = "^5.0.0"


[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.3.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [".", "app"]
asyncio_mode = "auto"
python_files = ["*_test.py", "test_*.py"]